--- a/model_bbox/Hybrid_RFCN_CROP.ipynb
+++ b/model_bbox/Hybrid_RFCN_CROP.ipynb
@@ -41,7 +41,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 2,
    "metadata": {
     "collapsed": false
    },
@@ -199,7 +199,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 4,
    "metadata": {
     "collapsed": false
    },
@@ -208,7 +208,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "CPU times: user 1min 8s, sys: 0 ns, total: 1min 8s\n",
+      "CPU times: user 1min 6s, sys: 900 ms, total: 1min 7s\n",
       "Wall time: 1min 7s\n"
      ]
     }
@@ -270,7 +270,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 5,
    "metadata": {
     "collapsed": true
    },
@@ -292,7 +292,7 @@
    "execution_count": null,
    "metadata": {
     "collapsed": false,
-    "scrolled": true
+    "scrolled": false
    },
    "outputs": [
     {
@@ -357,11 +357,163 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Loading model from checkpoint file ./resnet50_DO5_FT38_Hybrid/checkpoint/weights.014-0.5484.hdf5\n",
+      "Epoch 1/300\n",
+      "16000/16128 [============================>.] - ETA: 3s - loss: 0.6165 - acc: 0.7810Epoch 00000: val_loss improved from inf to 0.43510, saving model to ./resnet50_DO5_FT38_Hybrid/checkpoint/weights.000-0.4351.hdf5\n",
+      "16128/16128 [==============================] - 437s - loss: 0.6163 - acc: 0.7812 - val_loss: 0.4351 - val_acc: 0.8550\n",
+      "Epoch 2/300\n",
+      "16000/16128 [============================>.] - ETA: 2s - loss: 0.4428 - acc: 0.8393Epoch 00001: val_loss improved from 0.43510 to 0.35825, saving model to ./resnet50_DO5_FT38_Hybrid/checkpoint/weights.001-0.3583.hdf5\n",
+      "16128/16128 [==============================] - 415s - loss: 0.4417 - acc: 0.8397 - val_loss: 0.3583 - val_acc: 0.8873\n",
+      "Epoch 3/300\n",
+      "16000/16128 [============================>.] - ETA: 2s - loss: 0.3613 - acc: 0.8716Epoch 00002: val_loss improved from 0.35825 to 0.27873, saving model to ./resnet50_DO5_FT38_Hybrid/checkpoint/weights.002-0.2787.hdf5\n",
+      "16128/16128 [==============================] - 415s - loss: 0.3611 - acc: 0.8716 - val_loss: 0.2787 - val_acc: 0.9168\n",
+      "Epoch 4/300\n",
+      "16000/16128 [============================>.] - ETA: 2s - loss: 0.2842 - acc: 0.8989Epoch 00003: val_loss improved from 0.27873 to 0.25553, saving model to ./resnet50_DO5_FT38_Hybrid/checkpoint/weights.003-0.2555.hdf5\n",
+      "16128/16128 [==============================] - 415s - loss: 0.2838 - acc: 0.8989 - val_loss: 0.2555 - val_acc: 0.9166\n",
+      "Epoch 5/300\n",
+      "16000/16128 [============================>.] - ETA: 2s - loss: 0.2316 - acc: 0.9199Epoch 00004: val_loss improved from 0.25553 to 0.22385, saving model to ./resnet50_DO5_FT38_Hybrid/checkpoint/weights.004-0.2239.hdf5\n",
+      "16128/16128 [==============================] - 415s - loss: 0.2313 - acc: 0.9200 - val_loss: 0.2239 - val_acc: 0.9302\n",
+      "Epoch 6/300\n",
+      "16000/16128 [============================>.] - ETA: 2s - loss: 0.1897 - acc: 0.9336Epoch 00005: val_loss improved from 0.22385 to 0.19721, saving model to ./resnet50_DO5_FT38_Hybrid/checkpoint/weights.005-0.1972.hdf5\n",
+      "16128/16128 [==============================] - 416s - loss: 0.1897 - acc: 0.9335 - val_loss: 0.1972 - val_acc: 0.9397\n",
+      "Epoch 7/300\n",
+      "16000/16128 [============================>.] - ETA: 3s - loss: 0.1631 - acc: 0.9451Epoch 00006: val_loss improved from 0.19721 to 0.16321, saving model to ./resnet50_DO5_FT38_Hybrid/checkpoint/weights.006-0.1632.hdf5\n",
+      "16128/16128 [==============================] - 417s - loss: 0.1635 - acc: 0.9449 - val_loss: 0.1632 - val_acc: 0.9515\n",
+      "Epoch 8/300\n",
+      "16000/16128 [============================>.] - ETA: 3s - loss: 0.1360 - acc: 0.9546Epoch 00007: val_loss improved from 0.16321 to 0.14352, saving model to ./resnet50_DO5_FT38_Hybrid/checkpoint/weights.007-0.1435.hdf5\n",
+      "16128/16128 [==============================] - 417s - loss: 0.1361 - acc: 0.9545 - val_loss: 0.1435 - val_acc: 0.9548\n",
+      "Epoch 9/300\n",
+      "16000/16128 [============================>.] - ETA: 3s - loss: 0.1124 - acc: 0.9624Epoch 00008: val_loss improved from 0.14352 to 0.13224, saving model to ./resnet50_DO5_FT38_Hybrid/checkpoint/weights.008-0.1322.hdf5\n",
+      "16128/16128 [==============================] - 418s - loss: 0.1119 - acc: 0.9626 - val_loss: 0.1322 - val_acc: 0.9579\n",
+      "Epoch 10/300\n",
+      "16000/16128 [============================>.] - ETA: 3s - loss: 0.0963 - acc: 0.9701Epoch 00009: val_loss improved from 0.13224 to 0.11844, saving model to ./resnet50_DO5_FT38_Hybrid/checkpoint/weights.009-0.1184.hdf5\n",
+      "16128/16128 [==============================] - 417s - loss: 0.0961 - acc: 0.9702 - val_loss: 0.1184 - val_acc: 0.9633\n",
+      "Epoch 11/300\n",
+      "16000/16128 [============================>.] - ETA: 3s - loss: 0.0788 - acc: 0.9741Epoch 00010: val_loss improved from 0.11844 to 0.11789, saving model to ./resnet50_DO5_FT38_Hybrid/checkpoint/weights.010-0.1179.hdf5\n",
+      "16128/16128 [==============================] - 418s - loss: 0.0787 - acc: 0.9741 - val_loss: 0.1179 - val_acc: 0.9620\n",
+      "Epoch 12/300\n",
+      "16000/16128 [============================>.] - ETA: 3s - loss: 0.0654 - acc: 0.9791Epoch 00011: val_loss improved from 0.11789 to 0.11314, saving model to ./resnet50_DO5_FT38_Hybrid/checkpoint/weights.011-0.1131.hdf5\n",
+      "16128/16128 [==============================] - 418s - loss: 0.0654 - acc: 0.9792 - val_loss: 0.1131 - val_acc: 0.9625\n",
+      "Epoch 13/300\n",
+      "16000/16128 [============================>.] - ETA: 3s - loss: 0.0548 - acc: 0.9823Epoch 00012: val_loss did not improve\n",
+      "16128/16128 [==============================] - 416s - loss: 0.0549 - acc: 0.9822 - val_loss: 0.1141 - val_acc: 0.9641\n",
+      "Epoch 14/300\n",
+      "16000/16128 [============================>.] - ETA: 2s - loss: 0.0522 - acc: 0.9841Epoch 00013: val_loss improved from 0.11314 to 0.11285, saving model to ./resnet50_DO5_FT38_Hybrid/checkpoint/weights.013-0.1128.hdf5\n",
+      "16128/16128 [==============================] - 416s - loss: 0.0520 - acc: 0.9842 - val_loss: 0.1128 - val_acc: 0.9646\n",
+      "Epoch 15/300\n",
+      "16000/16128 [============================>.] - ETA: 2s - loss: 0.0421 - acc: 0.9875Epoch 00014: val_loss improved from 0.11285 to 0.10490, saving model to ./resnet50_DO5_FT38_Hybrid/checkpoint/weights.014-0.1049.hdf5\n",
+      "16128/16128 [==============================] - 416s - loss: 0.0420 - acc: 0.9875 - val_loss: 0.1049 - val_acc: 0.9689\n",
+      "Epoch 16/300\n",
+      "16000/16128 [============================>.] - ETA: 2s - loss: 0.0377 - acc: 0.9888Epoch 00015: val_loss improved from 0.10490 to 0.10452, saving model to ./resnet50_DO5_FT38_Hybrid/checkpoint/weights.015-0.1045.hdf5\n",
+      "16128/16128 [==============================] - 416s - loss: 0.0376 - acc: 0.9888 - val_loss: 0.1045 - val_acc: 0.9692\n",
+      "Epoch 17/300\n",
+      "16000/16128 [============================>.] - ETA: 2s - loss: 0.0347 - acc: 0.9899Epoch 00016: val_loss did not improve\n",
+      "16128/16128 [==============================] - 415s - loss: 0.0345 - acc: 0.9900 - val_loss: 0.1091 - val_acc: 0.9671\n",
+      "Epoch 18/300\n",
+      "16000/16128 [============================>.] - ETA: 3s - loss: 0.0308 - acc: 0.9899Epoch 00017: val_loss improved from 0.10452 to 0.10020, saving model to ./resnet50_DO5_FT38_Hybrid/checkpoint/weights.017-0.1002.hdf5\n",
+      "16128/16128 [==============================] - 416s - loss: 0.0307 - acc: 0.9899 - val_loss: 0.1002 - val_acc: 0.9700\n",
+      "Epoch 19/300\n",
+      "16000/16128 [============================>.] - ETA: 2s - loss: 0.0312 - acc: 0.9906Epoch 00018: val_loss improved from 0.10020 to 0.09377, saving model to ./resnet50_DO5_FT38_Hybrid/checkpoint/weights.018-0.0938.hdf5\n",
+      "16128/16128 [==============================] - 415s - loss: 0.0312 - acc: 0.9906 - val_loss: 0.0938 - val_acc: 0.9715\n",
+      "Epoch 20/300\n",
+      "16000/16128 [============================>.] - ETA: 2s - loss: 0.0249 - acc: 0.9919Epoch 00019: val_loss improved from 0.09377 to 0.08653, saving model to ./resnet50_DO5_FT38_Hybrid/checkpoint/weights.019-0.0865.hdf5\n",
+      "16128/16128 [==============================] - 415s - loss: 0.0252 - acc: 0.9919 - val_loss: 0.0865 - val_acc: 0.9748\n",
+      "Epoch 21/300\n",
+      "16000/16128 [============================>.] - ETA: 2s - loss: 0.0236 - acc: 0.9932Epoch 00020: val_loss did not improve\n",
+      "16128/16128 [==============================] - 415s - loss: 0.0242 - acc: 0.9931 - val_loss: 0.0889 - val_acc: 0.9746\n",
+      "Epoch 22/300\n",
+      "16000/16128 [============================>.] - ETA: 2s - loss: 0.0243 - acc: 0.9926Epoch 00021: val_loss did not improve\n",
+      "16128/16128 [==============================] - 414s - loss: 0.0244 - acc: 0.9926 - val_loss: 0.0950 - val_acc: 0.9715\n",
+      "Epoch 23/300\n",
+      "16000/16128 [============================>.] - ETA: 2s - loss: 0.0196 - acc: 0.9941Epoch 00022: val_loss improved from 0.08653 to 0.08620, saving model to ./resnet50_DO5_FT38_Hybrid/checkpoint/weights.022-0.0862.hdf5\n",
+      "16128/16128 [==============================] - 415s - loss: 0.0195 - acc: 0.9942 - val_loss: 0.0862 - val_acc: 0.9746\n",
+      "Epoch 24/300\n",
+      "16000/16128 [============================>.] - ETA: 2s - loss: 0.0169 - acc: 0.9954Epoch 00023: val_loss improved from 0.08620 to 0.08413, saving model to ./resnet50_DO5_FT38_Hybrid/checkpoint/weights.023-0.0841.hdf5\n",
+      "16128/16128 [==============================] - 415s - loss: 0.0168 - acc: 0.9954 - val_loss: 0.0841 - val_acc: 0.9790\n",
+      "Epoch 25/300\n",
+      "16000/16128 [============================>.] - ETA: 2s - loss: 0.0173 - acc: 0.9952Epoch 00024: val_loss did not improve\n",
+      "16128/16128 [==============================] - 414s - loss: 0.0172 - acc: 0.9952 - val_loss: 0.0865 - val_acc: 0.9779\n",
+      "Epoch 26/300\n",
+      "16000/16128 [============================>.] - ETA: 2s - loss: 0.0137 - acc: 0.9959Epoch 00025: val_loss did not improve\n",
+      "16128/16128 [==============================] - 414s - loss: 0.0136 - acc: 0.9960 - val_loss: 0.0922 - val_acc: 0.9774\n",
+      "Epoch 27/300\n",
+      "16000/16128 [============================>.] - ETA: 2s - loss: 0.0157 - acc: 0.9952Epoch 00026: val_loss did not improve\n",
+      "16128/16128 [==============================] - 415s - loss: 0.0156 - acc: 0.9952 - val_loss: 0.0984 - val_acc: 0.9743\n",
+      "Epoch 28/300\n",
+      "16000/16128 [============================>.] - ETA: 2s - loss: 0.0143 - acc: 0.9961Epoch 00027: val_loss did not improve\n",
+      "16128/16128 [==============================] - 414s - loss: 0.0142 - acc: 0.9962 - val_loss: 0.0902 - val_acc: 0.9761\n",
+      "Epoch 29/300\n",
+      "16000/16128 [============================>.] - ETA: 2s - loss: 0.0138 - acc: 0.9962Epoch 00028: val_loss improved from 0.08413 to 0.08198, saving model to ./resnet50_DO5_FT38_Hybrid/checkpoint/weights.028-0.0820.hdf5\n",
+      "16128/16128 [==============================] - 415s - loss: 0.0137 - acc: 0.9962 - val_loss: 0.0820 - val_acc: 0.9772\n",
+      "Epoch 30/300\n",
+      "16000/16128 [============================>.] - ETA: 2s - loss: 0.0133 - acc: 0.9969Epoch 00029: val_loss improved from 0.08198 to 0.08052, saving model to ./resnet50_DO5_FT38_Hybrid/checkpoint/weights.029-0.0805.hdf5\n",
+      "16128/16128 [==============================] - 415s - loss: 0.0132 - acc: 0.9969 - val_loss: 0.0805 - val_acc: 0.9774\n",
+      "Epoch 31/300\n",
+      "16000/16128 [============================>.] - ETA: 2s - loss: 0.0105 - acc: 0.9970Epoch 00030: val_loss did not improve\n",
+      "16128/16128 [==============================] - 414s - loss: 0.0106 - acc: 0.9970 - val_loss: 0.0869 - val_acc: 0.9759\n",
+      "Epoch 32/300\n",
+      "16000/16128 [============================>.] - ETA: 2s - loss: 0.0111 - acc: 0.9967Epoch 00031: val_loss improved from 0.08052 to 0.08018, saving model to ./resnet50_DO5_FT38_Hybrid/checkpoint/weights.031-0.0802.hdf5\n",
+      "16128/16128 [==============================] - 415s - loss: 0.0111 - acc: 0.9967 - val_loss: 0.0802 - val_acc: 0.9772\n",
+      "Epoch 33/300\n",
+      "16000/16128 [============================>.] - ETA: 2s - loss: 0.0123 - acc: 0.9964Epoch 00032: val_loss did not improve\n",
+      "16128/16128 [==============================] - 414s - loss: 0.0122 - acc: 0.9965 - val_loss: 0.0902 - val_acc: 0.9743\n",
+      "Epoch 34/300\n",
+      "16000/16128 [============================>.] - ETA: 2s - loss: 0.0110 - acc: 0.9962Epoch 00033: val_loss did not improve\n",
+      "16128/16128 [==============================] - 414s - loss: 0.0110 - acc: 0.9963 - val_loss: 0.0921 - val_acc: 0.9761\n",
+      "Epoch 35/300\n",
+      "16000/16128 [============================>.] - ETA: 2s - loss: 0.0104 - acc: 0.9974Epoch 00034: val_loss did not improve\n",
+      "16128/16128 [==============================] - 415s - loss: 0.0108 - acc: 0.9973 - val_loss: 0.0828 - val_acc: 0.9777\n",
+      "Epoch 36/300\n",
+      "16000/16128 [============================>.] - ETA: 2s - loss: 0.0123 - acc: 0.9962Epoch 00035: val_loss did not improve\n",
+      "\n",
+      "Epoch 00035: reducing learning rate to 9.999999747378752e-07.\n",
+      "16128/16128 [==============================] - 415s - loss: 0.0122 - acc: 0.9962 - val_loss: 0.0826 - val_acc: 0.9777\n",
+      "Epoch 37/300\n",
+      "16000/16128 [============================>.] - ETA: 2s - loss: 0.0087 - acc: 0.9978Epoch 00036: val_loss did not improve\n",
+      "16128/16128 [==============================] - 414s - loss: 0.0086 - acc: 0.9978 - val_loss: 0.0811 - val_acc: 0.9787\n",
+      "Epoch 38/300\n",
+      "16000/16128 [============================>.] - ETA: 2s - loss: 0.0064 - acc: 0.9982Epoch 00037: val_loss did not improve\n",
+      "16128/16128 [==============================] - 414s - loss: 0.0063 - acc: 0.9983 - val_loss: 0.0816 - val_acc: 0.9792\n",
+      "Epoch 39/300\n",
+      "16000/16128 [============================>.] - ETA: 2s - loss: 0.0072 - acc: 0.9982Epoch 00038: val_loss did not improve\n",
+      "16128/16128 [==============================] - 414s - loss: 0.0072 - acc: 0.9982 - val_loss: 0.0812 - val_acc: 0.9797\n",
+      "Epoch 40/300\n",
+      "16000/16128 [============================>.] - ETA: 2s - loss: 0.0069 - acc: 0.9981Epoch 00039: val_loss did not improve\n",
+      "16128/16128 [==============================] - 414s - loss: 0.0068 - acc: 0.9981 - val_loss: 0.0820 - val_acc: 0.9795\n",
+      "Epoch 41/300\n",
+      "16000/16128 [============================>.] - ETA: 2s - loss: 0.0071 - acc: 0.9975Epoch 00040: val_loss did not improve\n",
+      "\n",
+      "Epoch 00040: reducing learning rate to 9.999999974752428e-08.\n",
+      "16128/16128 [==============================] - 414s - loss: 0.0070 - acc: 0.9975 - val_loss: 0.0815 - val_acc: 0.9790\n",
+      "Epoch 42/300\n",
+      "16000/16128 [============================>.] - ETA: 2s - loss: 0.0064 - acc: 0.9986Epoch 00041: val_loss did not improve\n",
+      "16128/16128 [==============================] - 414s - loss: 0.0064 - acc: 0.9986 - val_loss: 0.0814 - val_acc: 0.9797\n",
+      "Epoch 43/300\n",
+      "16000/16128 [============================>.] - ETA: 2s - loss: 0.0070 - acc: 0.9978Epoch 00042: val_loss did not improve\n",
+      "16128/16128 [==============================] - 414s - loss: 0.0070 - acc: 0.9978 - val_loss: 0.0809 - val_acc: 0.9795\n",
+      "Epoch 00042: early stopping\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "<keras.callbacks.History at 0x7f333cdcd828>"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# Resnet50\n",
     "# fine tuning\n",
@@ -413,11 +565,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Loading model from checkpoint file ./resnet50_DO5_FT38_Hybrid/checkpoint/weights.031-0.0802.hdf5\n"
+     ]
+    }
+   ],
    "source": [
     "#test prepare\n",
     "\n",
@@ -463,11 +623,42 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {
-    "collapsed": true
+    "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "3896/3896 [==============================] - 42s    \n",
+      "class\n",
+      "ALB      0.257633\n",
+      "BET      0.381819\n",
+      "DOL      0.943872\n",
+      "LAG      0.000553\n",
+      "NoF      0.031846\n",
+      "OTHER    0.314458\n",
+      "SHARK    0.000437\n",
+      "YFT      0.118060\n",
+      "Name: logloss, dtype: float64\n",
+      "0.08018195772098172\n",
+      "15583/15583 [==============================] - 149s   \n",
+      "class\n",
+      "ALB      0.055689\n",
+      "BET      0.001477\n",
+      "DOL      0.000435\n",
+      "LAG      0.000192\n",
+      "NoF      0.020280\n",
+      "OTHER    0.006523\n",
+      "SHARK    0.006177\n",
+      "YFT      0.005836\n",
+      "Name: logloss, dtype: float64\n",
+      "0.02335000667371495\n"
+     ]
+    }
+   ],
    "source": [
     "#validation data fish logloss\n",
     "valid_pred = test_model.predict(valid_x, batch_size=BATCHSIZE, verbose=1)\n",
@@ -507,11 +698,34 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Generating file GTbbox_CROPpred_df_weights.031-0.0802.hdf5_.pickle\n",
+      "batch_index 50\n",
+      "batch_index 100\n",
+      "batch_index 150\n",
+      "batch_index 0\n",
+      "crop_class\n",
+      "ALB      0.096110\n",
+      "BET      0.077297\n",
+      "DOL      0.187625\n",
+      "LAG      0.000265\n",
+      "NoF      0.022594\n",
+      "OTHER    0.067555\n",
+      "SHARK    0.005023\n",
+      "YFT      0.028309\n",
+      "Name: logloss, dtype: float64\n",
+      "0.034716977687433155\n"
+     ]
+    }
+   ],
    "source": [
     "#GTbbox_CROPpred_df = ['image_file','crop_index','crop_class','xmin','ymin','xmax','ymax',\n",
     "#                      'NoF', 'ALB', 'BET', 'DOL', 'LAG', 'OTHER', 'SHARK', 'YFT', 'logloss']\n",
