--- a/model_bbox/Hybrid_RFCN_CROP.ipynb
+++ b/model_bbox/Hybrid_RFCN_CROP.ipynb
@@ -41,7 +41,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 8,
    "metadata": {
     "collapsed": false
    },
@@ -63,6 +63,8 @@
     "if not os.path.exists(OUTPUT_DIR):\n",
     "    os.mkdir(OUTPUT_DIR)\n",
     "FISH_CLASSES = ['NoF', 'ALB', 'BET', 'DOL', 'LAG', 'OTHER', 'SHARK', 'YFT']\n",
+    "CROP_CLASSES=FISH_CLASSES[:]\n",
+    "CROP_CLASSES.remove('NoF')\n",
     "CONF_THRESH = 0.8\n",
     "ROWS = 224\n",
     "COLS = 224\n",
@@ -85,13 +87,9 @@
     "    #resnet50 image preprocessing\n",
     "    # 'RGB'->'BGR'\n",
     "    x = x[:, :, ::-1]\n",
-    "#     x[:, :, 0] -= 103.939\n",
-    "#     x[:, :, 1] -= 116.779\n",
-    "#     x[:, :, 2] -= 123.68\n",
-    "    x[:, :, 0] -= 128\n",
-    "    x[:, :, 1] -= 128\n",
-    "    x[:, :, 2] -= 128\n",
-    "    x /= 255.\n",
+    "    x[:, :, 0] -= 103.939\n",
+    "    x[:, :, 1] -= 116.779\n",
+    "    x[:, :, 2] -= 123.68\n",
     "    return x\n",
     "\n",
     "def get_best_model():\n",
@@ -106,7 +104,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 5,
    "metadata": {
     "collapsed": false
    },
@@ -199,7 +197,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 16,
    "metadata": {
     "collapsed": false
    },
@@ -208,8 +206,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "CPU times: user 1min 6s, sys: 900 ms, total: 1min 7s\n",
-      "Wall time: 1min 7s\n"
+      "CPU times: user 15.3 s, sys: 136 ms, total: 15.4 s\n",
+      "Wall time: 15.3 s\n"
      ]
     }
    ],
@@ -220,7 +218,7 @@
     "\n",
     "train_df, valid_df = train_test_split(GTbbox_df, test_size=0.2, random_state=1986, stratify=GTbbox_df['crop_class'])\n",
     "\n",
-    "nb_fish = math.ceil(BATCHSIZE / len(FISH_CLASSES))\n",
+    "nb_fish = math.ceil(BATCHSIZE / len(CROP_CLASSES))\n",
     "samples_per_epoch=BATCHSIZE*math.ceil(train_df.groupby('crop_class').size()['ALB']/nb_fish)\n",
     "  \n",
     "train_datagen = ImageDataGenerator(\n",
@@ -235,9 +233,10 @@
     "def train_generator(datagen, df):\n",
     "    while 1:\n",
     "        batch_x = np.zeros((BATCHSIZE, ROWS, COLS, 3), dtype=K.floatx())\n",
-    "        batch_y = np.zeros((BATCHSIZE, len(FISH_CLASSES)), dtype=K.floatx())\n",
+    "        batch_y = np.zeros((BATCHSIZE, len(CROP_CLASSES)), dtype=K.floatx())\n",
     "        fn = lambda obj: obj.loc[np.random.choice(obj.index, size=nb_fish, replace=False),:]\n",
     "        batch_df = df.groupby('crop_class', as_index=True).apply(fn)\n",
+    "        batch_df = batch_df.loc[np.random.choice(batch_df.index, size=BATCHSIZE, replace=False),:]\n",
     "        i = 0\n",
     "        for index,row in batch_df.iterrows():\n",
     "            image_file = row['image_file']\n",
@@ -248,13 +247,13 @@
     "            x = datagen.random_transform(x)\n",
     "            x = preprocess_input(x)\n",
     "            batch_x[i] = x\n",
-    "            batch_y[i,FISH_CLASSES.index(fish)] = 1\n",
+    "            batch_y[i,CROP_CLASSES.index(fish)] = 1\n",
     "            i += 1\n",
     "        yield (batch_x, batch_y)\n",
     "\n",
     "# validation_data (valid_x,valid_y)\n",
     "valid_x = np.zeros((valid_df.shape[0], ROWS, COLS, 3), dtype=K.floatx())\n",
-    "valid_y = np.zeros((valid_df.shape[0], len(FISH_CLASSES)), dtype=K.floatx())\n",
+    "valid_y = np.zeros((valid_df.shape[0], len(CROP_CLASSES)), dtype=K.floatx())\n",
     "i = 0\n",
     "for index,row in valid_df.iterrows():\n",
     "    image_file = row['image_file']\n",
@@ -264,13 +263,13 @@
     "    x = np.asarray(cropped, dtype=K.floatx())\n",
     "    x = preprocess_input(x)\n",
     "    valid_x[i] = x\n",
-    "    valid_y[i,FISH_CLASSES.index(fish)] = 1\n",
+    "    valid_y[i,CROP_CLASSES.index(fish)] = 1\n",
     "    i += 1\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 10,
    "metadata": {
     "collapsed": true
    },
@@ -300,22 +299,7 @@
      "output_type": "stream",
      "text": [
       "Epoch 1/30\n",
-      "16000/16128 [============================>.] - ETA: 1s - loss: 2.2073 - acc: 0.2465Epoch 00000: val_loss improved from inf to 1.45326, saving model to ./resnet50_DO5_FT38_Hybrid/checkpoint/weights.000-1.4533.hdf5\n",
-      "16128/16128 [==============================] - 261s - loss: 2.2026 - acc: 0.2480 - val_loss: 1.4533 - val_acc: 0.7734\n",
-      "Epoch 2/30\n",
-      "16000/16128 [============================>.] - ETA: 1s - loss: 1.6258 - acc: 0.4295Epoch 00001: val_loss improved from 1.45326 to 1.17159, saving model to ./resnet50_DO5_FT38_Hybrid/checkpoint/weights.001-1.1716.hdf5\n",
-      "16128/16128 [==============================] - 230s - loss: 1.6243 - acc: 0.4301 - val_loss: 1.1716 - val_acc: 0.7757\n",
-      "Epoch 3/30\n",
-      "16000/16128 [============================>.] - ETA: 1s - loss: 1.3600 - acc: 0.5264Epoch 00002: val_loss improved from 1.17159 to 1.04376, saving model to ./resnet50_DO5_FT38_Hybrid/checkpoint/weights.002-1.0438.hdf5\n",
-      "16128/16128 [==============================] - 232s - loss: 1.3594 - acc: 0.5272 - val_loss: 1.0438 - val_acc: 0.7757\n",
-      "Epoch 4/30\n",
-      "16000/16128 [============================>.] - ETA: 1s - loss: 1.2192 - acc: 0.5699Epoch 00003: val_loss improved from 1.04376 to 1.03836, saving model to ./resnet50_DO5_FT38_Hybrid/checkpoint/weights.003-1.0384.hdf5\n",
-      "16128/16128 [==============================] - 231s - loss: 1.2182 - acc: 0.5704 - val_loss: 1.0384 - val_acc: 0.7757\n",
-      "Epoch 5/30\n",
-      "16000/16128 [============================>.] - ETA: 1s - loss: 1.1234 - acc: 0.6062Epoch 00004: val_loss did not improve\n",
-      "16128/16128 [==============================] - 231s - loss: 1.1227 - acc: 0.6066 - val_loss: 1.0439 - val_acc: 0.7757\n",
-      "Epoch 6/30\n",
-      " 8960/16128 [===============>..............] - ETA: 81s - loss: 1.0340 - acc: 0.6366"
+      " 4352/13568 [========>.....................] - ETA: 130s - loss: 2.4990 - acc: 0.1376"
      ]
     }
    ],
@@ -336,7 +320,7 @@
     "# x = Dense(256, init='glorot_normal')(x)\n",
     "# x = LeakyReLU(alpha=0.33)(x)\n",
     "x = Dropout(0.5)(x)\n",
-    "predictions = Dense(len(FISH_CLASSES), init='glorot_normal', activation='softmax')(x)\n",
+    "predictions = Dense(len(CROP_CLASSES), init='glorot_normal', activation='softmax')(x)\n",
     "\n",
     "model = Model(input=base_model.input, output=predictions)\n",
     "\n",
